# verarta.com

./: .gitignore  DEPLOYMENT_COMPLETE.md  LOTTERY_PLAN.md  PARKING_TICKETS_PLAN.md  PLAN.md  PLAN_ENCRYPTION.md  PLAN_FILE_LIMITS.md  PLAN_FRONTEND.md  PLAN_MAILINABOX.md  README.md  README_VARIABLE_RATE.md  STATUS.md  claude.md  deploy-production.sh  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml
backend/: .env.example  astro.config.mjs  ecosystem.config.cjs  package.json  tsconfig.json
backend/migrations/: 001_initial_schema.sql  002_artwork_extras.sql  002_oauth_and_avatar.sql  003_artwork_extras_title.sql  004_antelope_key_backup.sql  005_hidden_artworks.sql  006_artwork_extras_file_order.sql  007_public_profiles.sql  008_artwork_blockchain_tx.sql
blockchain/: .dockerignore  .env.example  Dockerfile  accounts.json.example  genesis.json
blockchain-test/: activate-features.sh  activate-savanna.sh  genesis.json
blockchain-test/config/: history.ini  producer1.ini  producer2.ini  producer3.ini  producer4.ini
blockchain-test/explorer/: index.html
blockchain-test/hyperion/: combined-ecosystem.config.cjs  connections.json
blockchain-test/pace-controller/: Dockerfile  package.json
blockchain/contracts/verarta.core/: CMakeLists.txt  README.md  verarta.core.cpp  verarta.core.hpp
deployment/: DEPLOYMENT_GUIDE.md  README.md  check-server.sh  cleanup-server.sh  deploy.sh  nginx-verarta.conf  production.env.example  redeploy.sh  setup-server.sh
frontend/: next.config.ts  package.json
nginx/: verarta-test.conf  verarta.com.conf
(+182 files in other folders)
